# CodeIA

./: LICENSE  pom.xml  setup.py
core/engines/cpp_engine/: CMakeLists.txt  kinect_test.cpp  main.cpp  tasks.cpp  test_server.py  test_validator.py
core/engines/cpp_engine/include/: config.h  executor.h  macros.h  tasks.h  utils.h
core/engines/cpp_engine/include/api/: cpp_engine.h
core/engines/cpp_engine/include/core/: core.h  cpp_engine.h  engine.h  executor.h  macros.h
core/engines/cpp_engine/include/effects/: effects_engine.h
core/engines/cpp_engine/include/filters/: image_filter.h
core/engines/cpp_engine/include/generators/: image_generator.h  video_generator.h
core/engines/cpp_engine/include/models/: model_backend.h  model_manager.h  neural_network.h  onnx_backend.h  torch_backend.h
core/engines/cpp_engine/include/modules/audio/: audio_module.h  speech_recognizer.h  speech_synthesizer.h
core/engines/cpp_engine/include/modules/generators/: code_generation_task.h  image_generator.h  video_generator.h
core/engines/cpp_engine/include/modules/network/: network_client.h
core/engines/cpp_engine/include/modules/nlp/: sentiment_analyzer.h  text_generator.h  translator.h
core/engines/cpp_engine/include/modules/system/: memory_manager.h  notification_manager.h  system_monitor.h  task_scheduler.h
core/engines/cpp_engine/include/modules/vision/: classifier.h  detector.h  feature_extractor.h  kinect_interface.h  vision_module.h
core/engines/cpp_engine/include/network/: AIVisionClient.h  http_server.h  validation_endpoint.h
core/engines/cpp_engine/include/optimization/: performance_optimizer.h
core/engines/cpp_engine/include/sandbox/: comparator.h
core/engines/cpp_engine/include/tasks/: analysis_task.h  anonymization_task.h  audio_generation_task.h  auto_correction_task.h  calibration_task.h  classification_task.h  clustering_task.h  complex_task.h  compression_task.h  decompression_task.h  explanation_task.h  feature_extraction_task.h  gpu_acceleration_task.h  graph_generation_task.h  graph_optimization_task.h  hashing_task.h  image3d_generation_task.h  image_generation_task.h  logging_task.h  lowlatency_audio_task.h  monitoring_task.h  object_detection_task.h  optimization_task.h  physics_simulation_task.h  planning_task.h  realtime_streaming_task.h  recommendation_task.h  rendering_task.h  scoring_task.h  search_task.h  security_task.h  segmentation_task.h  simulation_task.h  speech_recognition_task.h  speech_synthesis_task.h  summarization_task.h  table_generation_task.h  tasks.h  tensor_inference_task.h  text_generation_task.h  (+4 more)
core/engines/cpp_engine/include/utils/: config.h  error_handling.h  logger.h  utils.h
core/engines/cpp_engine/scripts/: download_libtorch.sh  download_onnxrt.sh
core/engines/cpp_engine/src/: server.cpp
core/engines/cpp_engine/src/effects/: effects_engine.cpp
core/engines/cpp_engine/src/filters/: image_filter.cpp
core/engines/cpp_engine/src/generators/: image_generator.cpp  video_generator.cpp
core/engines/cpp_engine/src/models/: model_manager.cpp  neural_network.cpp  onnx_backend.cpp  torch_backend.cpp
core/engines/cpp_engine/src/modules/analytics/: analyser.cpp  analytics_module.cpp  optimizer.cpp  scorer.cpp
core/engines/cpp_engine/src/modules/audio/: audio_module.cpp  speech_recognizer.cpp  speech_synthesizer.cpp
core/engines/cpp_engine/src/modules/network/: network_client.cpp
core/engines/cpp_engine/src/modules/nlp/: code_generator.cpp  nlp_module.cpp  sentiment_analyzer.cpp  summarizer.cpp  text_generator.cpp  translator.cpp
core/engines/cpp_engine/src/modules/planning/: planner.cpp  planning_module.cpp  simulator.cpp
core/engines/cpp_engine/src/modules/security/: anonymizer.cpp  monitoring.cpp  security_module.cpp  validation.cpp
core/engines/cpp_engine/src/modules/system/: configuration.cpp  logging.cpp  memory_manager.cpp  notification_manager.cpp  system_monitor.cpp  task_scheduler.cpp  user_feedback.cpp
core/engines/cpp_engine/src/modules/vision/: classifier.cpp  detector.cpp  kinect_interface.cpp  (+3 more)
core/engines/cpp_engine/src/network/: AIVisionClient.cpp  http_server.cpp  validation_endpoint.cpp
core/engines/cpp_engine/src/optimization/: performance_optimizer.cpp
core/engines/cpp_engine/src/sandbox/: comparator.cpp
core/engines/cpp_engine/src/tasks/: analysis_task.cpp  complex_task.cpp  monitoring_task.cpp  object_detection_task.cpp  recommendation_task.cpp  speech_recognition_task.cpp  speech_synthesis_task.cpp  summarization_task.cpp  tensor_inference_task.cpp
core/engines/cpp_engine/src/utils/: config.cpp  logger.cpp  utils.cpp
core/engines/cpp_engine/tests/: CMakeLists.txt  main.cpp  test_code_analysis.cpp  test_config.cpp  test_core.cpp  test_cpp_engine.cpp  test_cpp_engine_catch2.cpp  test_executor.cpp  test_executor_main.cpp  test_framework.h  test_image_generator.cpp  test_kinect_demo.cpp  test_macros.cpp  test_sandbox.cpp  test_tasks.cpp  test_tasks_enhanced.cpp  test_tasks_main.cpp  test_utils.cpp
core/engines/rust_engine/: Cargo.toml  main.py
core/engines/rust_engine/debug/: to_fix_rust.json
core/engines/rust_engine/src/: lib.rs  main.rs
core/engines/rust_engine/src/benches/: engine_benches.rs  mod.rs
core/engines/rust_engine/src/core/: ai_core.rs  async_runtime.rs  init.rs  ipc.rs  mod.rs  orchestrator_client.rs  orchestrator_internal.rs  sandbox.rs  task_handler.rs  task_handler_sync.rs  task_runner.rs
core/engines/rust_engine/src/engine_modes/: ai_rust_async.rs  ai_rust_autonomous.rs  ai_rust_hybrid.rs  ai_rust_rayon.rs  mod.rs
core/engines/rust_engine/src/modules/: code_improvement.rs  complex_state_management.rs  deep_learning.rs  deep_learning_impl.rs  deterministic_planning.rs  fsm_behavior_trees.rs  mod.rs  parallel_simulation.rs  pathfinding.rs  realtime_rule_engine.rs  reasoning.rs  reasoning_impl.rs  self_learning.rs  self_learning_impl.rs  world_model.rs
core/engines/rust_engine/src/utils/: debug_writer.rs  error.rs  file_ops.rs  helpers.rs  logger.rs  mod.rs  string_ops.rs  tracing_config.rs
core/engines/rust_engine/tests/: integration_tests.rs
(+96 files in other folders)
