[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"
authors = ["rayan"]
description = "Moteur IA autonome en Rust avec modules DeepLearning, SelfLearning, Reasoning et CodeImprovement"
license = "MIT"

# Définition du binaire principal
[[bin]]
name = "rust_engine"
path = "src/main.rs"

[dependencies]
# Librairies de base
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
chrono = "0.4"
rand = "0.8"

# Async / multithread
futures = "0.3"
tokio = { version = "1", features = ["full"] }
async-std = "1.12"
hyper = { version = "0.14", features = ["full"] }
async-trait = "0.1"

# Parallel processing
rayon = "1.11"
criterion = "0.7"
num_cpus = "1.16"

# Additional utilities
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
ordered-float = "2.10"
prometheus = "0.13"
warp = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["async", "async_futures", "async_smol", "async_std", "async_tokio", "csv_output", "html_reports", "real_blackbox", "stable"] }

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
debug = false
overflow-checks = true
incremental = false



